# vision-parse

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: benchmark_results.md  ground_truth.md  requirements.txt  scoring.py
docs/: config.md  docker_setup.md  faq.md  model_config.md  ollama_setup.md
docs/examples/: deepseek_demo.ipynb  gemini_demo.ipynb  gradio_app.py  ollama_demo.ipynb  openai_demo.ipynb  streamlit_app.py
examples/: demo_parser.ipynb  gemini_demo.ipynb  ollama_demo.ipynb  ollama_setup.md  openai_demo.ipynb
src/: markdown.py
src/multimodal_parser/: __init__.py  img_analysis.prompt  markdown.py
src/vision_parse/: __init__.py  constants.py  exceptions.py  image_analysis.j2  img_analysis.prompt  llm.py  markdown_prompt.j2  md_prompt.j2  parser.py  utils.py
src/vision_parse/prompts/: markdown_prompt.j2
tests/: conftest.py  test_llm.py  test_markdown.py  test_parser.py
