[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-parse"
version = "0.1.0"
description = "Extract content from PDF documents using Vision LLMs in markdown format"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Arun Brahma", email = "mithubrahma@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2>=3.0.0",
    "ollama>=0.4.4",
    "pydantic>=2.0.0",
    "pymupdf>=1.22.0",
    "tqdm>=4.65.0",
    "importlib-resources>=5.0.0; python_version < '3.9'"
]

[project.urls]
Homepage = "https://github.com/iamarunbrahma/vision-parse"
Repository = "https://github.com/iamarunbrahma/vision-parse.git"

[project.optional-dependencies]
dev = [
    "black>=24.4.1",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vision_parse"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/vision_parse",
    "/tests",
]

[tool.hatch.build.targets.wheel.force-include]
"src/vision_parse/md_prompt.j2" = "vision_parse/md_prompt.j2"
"src/vision_parse/img_analysis.prompt" = "vision_parse/img_analysis.prompt"