[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [
  {name = "Arun Brahma", email = "mithubrahma@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "jinja2>=3.0.0",
  "nest-asyncio>=1.6.0",
  "numpy>=2.0.0",
  "opencv-python>=4.10.0.84",
  "pydantic>=2.0.0",
  "pymupdf>=1.22.0",
  "tenacity>=9.0.0",
  "tqdm>=4.65.0",
  "litellm>=1.0.0",
  "instructor>=0.4.0"
]
description = "Parse PDF documents into markdown formatted content using Vision LLMs"
dynamic = ["version"]
keywords = [
  "pdf",
  "markdown",
  "pdf to markdown",
  "vision llm",
  "document parser",
  "ocr"
]
license = "MIT"
name = "vision-parse"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/iamarunbrahma/vision-parse"
Repository = "https://github.com/iamarunbrahma/vision-parse.git"

[project.optional-dependencies]
all = [
  "google-generativeai==0.8.3",
  "openai==1.59.8"
]
dev = [
  "black>=24.4.1",
  "black[jupyter]>=24.8.0",
  "build>=1.2.2",
  "flake8>=7.2.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.23.5",
  "python-dotenv>=1.1.0",
  "ruff>=0.8.3",
  "toml-sort>=0.24.2",
  "twine>=6.0.1"
]
gemini = [
  "google-generativeai==0.8.3"
]
openai = [
  "openai==1.59.8"
]

[tool.hatch.build.targets.wheel]
packages = ["src/vision_parse"]

[tool.hatch.build.targets.wheel.force-include]
"src/vision_parse/prompts/image_analysis.j2" = "vision_parse/prompts/image_analysis.j2"
"src/vision_parse/prompts/markdown_prompt.j2" = "vision_parse/prompts/markdown_prompt.j2"

[tool.hatch.build.targets.sdist]
include = [
  "/src/vision_parse",
  "/tests"
]

[tool.hatch.version]
source = "vcs"
